package pocketpal.communication;

public enum RequestMethod {
        GET, POST, PATCH, DELETE
}
