package pocketpal.communication;

public enum RequestParams {
    GET_SIZE, NUM_ENTRIES,
    EDIT_AMOUNT, EDIT_CATEGORY, EDIT_DESCRIPTION,
    FILTER_BY_CATEGORY, FILTER_BY_QUERY, FILTER_BY_AMOUNT_START, FILTER_BY_AMOUNT_END,
    FILTER_BY_TIME_START, FILTER_BY_TIME_END,
}
