package pocketpal.communication;

public enum ResponseStatus {
    OK, CREATED, NOT_FOUND, UNPROCESSABLE_CONTENT
}
